@@ -1,11 +1,9 @@
 package com.zaksen.zaksincclocks.command;
 
-import com.zaksen.zaksincclocks.ClockManager;
 import com.zaksen.zaksincclocks.ZaksIncClocks;
 import com.zaksen.zaksincclocks.clock.digital.DigitalClock;
 import com.zaksen.zaksincclocks.clock.text.TextClock;
 import com.zaksen.zaksincclocks.util.MessagesUtil;
-import com.zaksen.zaksincclocks.util.VariableBuilder;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
@@ -16,15 +14,16 @@ import org.jetbrains.annotations.Nullable;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 public class ClocksCommand implements TabExecutor {
 
     @Override
     public boolean onCommand(@NotNull CommandSender commandSender, @NotNull Command command, @NotNull String s, @NotNull String[] args) {
-        if (!(commandSender instanceof Player)) {
+        if (!(commandSender instanceof Player sender)) {
             MessagesUtil.sendByKey(commandSender, "only-player-command");
+            return true;
         }
-        Player sender = (Player) commandSender;
 
         if (args.length < 1) {
             MessagesUtil.sendByKey(sender, "enter-sub-command");
@@ -39,15 +38,12 @@ public class ClocksCommand implements TabExecutor {
     }
 
     private void processSubCommand(Player sender, String subCommand, String[] args) {
-        switch (subCommand) {
-            case "create": {
-                if (args.length < 2) {
-                    MessagesUtil.sendByKey(sender, "create-need-type-argument");
-                    return;
-                }
-                processCreateCommand(sender, args[1]);
-                break;
+        if (subCommand.equals("create")) {
+            if (args.length < 2) {
+                MessagesUtil.sendByKey(sender, "create-need-type-argument");
+                return;
             }
+            processCreateCommand(sender, args[1]);
         }
     }
 
@@ -65,22 +61,22 @@ public class ClocksCommand implements TabExecutor {
                 MessagesUtil.sendByKey(
                         sender,
                         "create-no-type-error",
-                        new VariableBuilder().newEntry("{type}", type).build()
+                        Map.of("{type}", type)
                 );
                 return;
             }
         }
-        MessagesUtil.sendByKey(sender, "create-success", new VariableBuilder().newEntry("{type}", type).build());
+        MessagesUtil.sendByKey(sender, "create-success", Map.of("{type}", type));
     }
 
     @Nullable
     @Override
     public List<String> onTabComplete(@NotNull CommandSender commandSender, @NotNull Command command, @NotNull String s, @NotNull String[] args) {
-        switch(args.length) {
-            case 1: return Collections.singletonList("create");
-            case 2: return Arrays.asList("digital", "text");
-        }
-        return null;
+        return switch (args.length) {
+            case 1 -> List.of("create");
+            case 2 -> List.of("digital", "text");
+            default -> null;
+        };
     }
 
 }
